[package]
name = "invidious"
version = "0.1.0"
edition = "2021"
authors = ["Siriusmart<siriusmart@tuta.io>"]
description = "Get information about videos from YouTube with this simple Invidious API wrapper."
readme = "README.md"
license = "GPL-3.0"
keywords = ["youtube", "invidious", "api", "wrapper"]
categories =["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.10", features = ["blocking"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.59"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]} # For running doc test

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
