[package]
name = "invidious"
version = "0.3.2"
edition = "2021"
authors = ["Siriusmart<siriusmart@tuta.io>"]
description = "Get information about videos from YouTube with this simple Invidious API wrapper. Does not use the YouTube API (No tokens required)"
readme = "README.md"
license = "GPL-3.0"
keywords = ["youtube", "invidious", "api", "wrapper"]
categories =["api-bindings"]
repository = "https://github.com/Siriusmart/invidious-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["reqwest", "curl", "curl_async"]
reqwest = ["dep:reqwest"]
curl = []
curl_async = ["dep:async-process"]

[dependencies]
reqwest = {version = "0.11", features = ["blocking"], optional = true}
async-process = {version = "1.4", optional = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]} # For running doc test

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
